--- a/src/sass/imports/_article-teaser.scss
+++ b/src/sass/imports/_article-teaser.scss
@@ -15,8 +15,8 @@
 
     .thumbnail {
         flex: 1 0 auto;
-        width: 100%;
-        height: auto;
+        width: auto;
+        height: 100%;
         max-width: $xxl;
         max-height: $xxl;
         margin: 0 1.5rem 0 0;
