--- a/src/sass/imports/_article-teaser.scss
+++ b/src/sass/imports/_article-teaser.scss
@@ -15,7 +15,7 @@
 
     .thumbnail {
         flex: 1 0 auto;
-        width: auto;
+        width: 100%;
         height: 100%;
         max-width: $xxl;
         max-height: $xxl;
