--- a/src/sass/imports/_article-teaser.scss
+++ b/src/sass/imports/_article-teaser.scss
@@ -16,7 +16,7 @@
     .thumbnail {
         flex: 1 0 auto;
         width: 100%;
-        height: 100%;
+        height: auto;
         max-width: $xxl;
         max-height: $xxl;
         margin: 0 1.5rem 0 0;
