_article-teaser.scss: changed

--- a/src/sass/imports/_article-teaser.scss
+++ b/src/sass/imports/_article-teaser.scss
@@ -1,6 +1,6 @@
 .article-teaser {
     display: flex;
-    align-items: flex-start;
+    align-items: flex-end;
     user-select: none;
     color: black;
     margin-bottom: 2.5rem;
