--- a/src/sass/imports/_article-teaser.scss
+++ b/src/sass/imports/_article-teaser.scss
@@ -19,7 +19,7 @@
         height: auto;
         max-width: $xxl;
         margin: 0 1.5rem 0 0;
-        align-self:
+        align-self: flex-start;
 
         @media screen and (max-width: $tablet) {
             max-width: 100%;
