--- a/src/sass/imports/_hero.scss
+++ b/src/sass/imports/_hero.scss
@@ -19,7 +19,7 @@
 
     img {
         width: 88px;
-        min-height: 100%;
+        min-width: 100%;
         margin: 0 1.5rem 0 0;
 
         @media screen and (max-width: $tablet) {
